Added dynamic playlist icon

--- a/qmpdclient.qrc
+++ b/qmpdclient.qrc
@@ -12,6 +12,7 @@
         <file>icons/crystal_amarok/amarok/repeat.png</file>
         <file>icons/crystal_amarok/amarok/shuffle.png</file>
         <file>icons/crystal_amarok/crop.png</file>
+		<file>icons/crystal_amarok/dynamic.png</file>
         <file>icons/crystal_amarok/crystal/clear.png</file>
         <file>icons/crystal_amarok/crystal/configure.png</file>
         <file>icons/crystal_amarok/crystal/connect.png</file>
