Extended song info for tray icon
by anonymous author
[http://www.assembla.com/spaces/qmpdclient-ne/tickets/26-Extended-song-info-for-tray-icon]

--- a/ui/preferencesdialog.ui
+++ b/ui/preferencesdialog.ui
@@ -1599,6 +1599,13 @@
                 </property>
                </widget>
               </item>
+	      <item>
+               <widget class="QCheckBox" name="songInfoCheck">
+                <property name="text">
+                 <string>Enable extended song info</string>
+                </property>
+               </widget>
+              </item>
              </layout>
             </widget>
            </item>
