--- a/ui/preferencesdialog.ui
+++ b/ui/preferencesdialog.ui
@@ -505,6 +505,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="transientSettingsCheck">
+             <property name="text">
+              <string>Save transient settings</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <spacer>
              <property name="orientation">
               <enum>Qt::Vertical</enum>
