fix of disappearing values of cover art preferences

--- a/ui/preferencesdialog.ui
+++ b/ui/preferencesdialog.ui
@@ -895,7 +895,7 @@
                  <string/>
                 </property>
                 <property name="text">
-                 <string>768</string>
+                 <string notr="true"/>
                 </property>
                </widget>
               </item>
