--- a/ui/preferencesdialog.ui
+++ b/ui/preferencesdialog.ui
@@ -852,7 +852,7 @@
                  <string/>
                 </property>
                 <property name="text">
-                 <string/>
+                 <string notr="true"/>
                 </property>
                </widget>
               </item>
@@ -878,7 +878,7 @@
                  <string/>
                 </property>
                 <property name="text">
-                 <string>1024</string>
+                 <string notr="true">1024</string>
                 </property>
                </widget>
               </item>
@@ -888,7 +888,7 @@
                  <string/>
                 </property>
                 <property name="text">
-                 <string>768</string>
+                 <string notr="true"/>
                 </property>
                </widget>
               </item>
