--- a/ui/lyricsdialog.ui
+++ b/ui/lyricsdialog.ui
@@ -52,23 +52,10 @@
     </layout>
    </item>
    <item>
-    <widget class="QWebView" name="lyricsBrowser">
-     <property name="url">
-      <url>
-       <string>about:blank</string>
-      </url>
-     </property>
-    </widget>
+    <widget class="QTextBrowser" name="lyricsBrowser"/>
    </item>
   </layout>
  </widget>
- <customwidgets>
-  <customwidget>
-   <class>QWebView</class>
-   <extends>QWidget</extends>
-   <header>QtWebKit/QWebView</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections>
   <connection>
